# Abalone

./: .gitignore  1-moves.txt  Board.h  CMakeLists.txt  Makefile  NOTES.txt  README copy.md  README.md  README_Windows.md  README_macOS.md  Test1.board  Test1.input  Test2.input  abalone  abalone_generator  abalone_generator.cpp  build_with_nuitka.ps1  build_with_nuitka.sh  compareBoards  install_dependencies.ps1  setup_and_run.bat  setup_and_run.ps1  setup_and_run.sh
cpp_backend/: 1-boards.txt  AIExample.cpp  AbaloneAI copy.cpp  AbaloneAI.cpp  AbaloneAI.h  AbaloneAI2 copy.cpp  AbaloneAI2.cpp  AbaloneAI2.h  AbaloneAiPybindWrapper.cpp  Board.cpp  Board.h  Evaluation.cpp  Evaluation.h  Makefile  Test1.board  Test1.move  Test2.board  Test4.board  Test4.input  Test6.board  Test6.input  Text1.actualnotation  TranspositionTable.cpp  TranspositionTable.h  abalone_ai  abalone_generator.cpp  board_visualizer.cpp  boardold  boards.txt  callgrind.out.45054  callgrind.out.52538  compareBoards.cpp  gmon.out  main.cpp  moves.txt  play_game  play_game.cpp  report.txt  temp.input  test1Normalized.board
cpp_backend/edge_cases_input/: corner_position.input  crowded.input  deadlock.input  tricky_group.input
cpp_backend/input/: Test5.input
cpp_backend/starting_position_input/: belgian.input  german.input  standard_start.input
old/: AbaloneAI_Old.cpp  Board.cpp  Board.h  main.cpp
python_gui/: abalone_ai.cp311-win_amd64.pyd  agent_secretary.py  main_app.py  move_history.json  tkinter_test.py
python_gui/factories/: scoreboard_factory.py  tile_factory.py
(+23 files in other folders)
